--- a/colibre-zooms/auto_plotter/metallicity.yml
+++ b/colibre-zooms/auto_plotter/metallicity.yml
@@ -34,6 +34,7 @@ stellar_mass_gas_sf_metallicity_fromz_lom_30:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_fromz_lom_100:
   type: "scatter"
@@ -71,6 +72,7 @@ stellar_mass_gas_sf_metallicity_fromz_lom_100:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_30:
   type: "scatter"
@@ -108,6 +110,7 @@ stellar_mass_gas_sf_metallicity_lom_30:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_100:
   type: "scatter"
@@ -145,6 +148,7 @@ stellar_mass_gas_sf_metallicity_lom_100:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_total_lom_30:
   type: "scatter"
@@ -182,6 +186,7 @@ stellar_mass_gas_sf_metallicity_total_lom_30:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_total_lom_100:
   type: "scatter"
@@ -219,6 +224,7 @@ stellar_mass_gas_sf_metallicity_total_lom_100:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_lowfloor_30:
   type: "scatter"
@@ -256,6 +262,7 @@ stellar_mass_gas_sf_metallicity_mol_lowfloor_30:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_lowfloor_100:
   type: "scatter"
@@ -293,6 +300,7 @@ stellar_mass_gas_sf_metallicity_mol_lowfloor_100:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_hifloor_30:
   type: "scatter"
@@ -330,6 +338,7 @@ stellar_mass_gas_sf_metallicity_mol_hifloor_30:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_mol_hifloor_100:
   type: "scatter"
@@ -367,6 +376,7 @@ stellar_mass_gas_sf_metallicity_mol_hifloor_100:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_allgals_30:
   type: "scatter"
@@ -404,6 +414,7 @@ stellar_mass_gas_sf_metallicity_lom_allgals_30:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
 
 stellar_mass_gas_sf_metallicity_lom_allgals_100:
   type: "scatter"
@@ -441,6 +452,8 @@ stellar_mass_gas_sf_metallicity_lom_allgals_100:
     - filename: GalaxyStellarMassGasMetallicity/Tremonti2004_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Zahid2014_Data.hdf5
     - filename: GalaxyStellarMassGasMetallicity/Andrews2013_Data.hdf5
+    - filename: GalaxyStellarMassGasMetallicity/Fraser-McKelvie_2021.hdf5
+
 
 stellar_mass_star_metallicity_100:
   type: "scatter"
@@ -474,6 +487,7 @@ stellar_mass_star_metallicity_100:
   observational_data:
     - filename: GalaxyStellarMassStellarMetallicity/Gallazzi2005_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kirby2013_Data.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Fraser-McKelvie_2021.hdf5 
 
 stellar_mass_star_metallicity_30:
   type: "scatter"
@@ -507,6 +521,7 @@ stellar_mass_star_metallicity_30:
   observational_data:
     - filename: GalaxyStellarMassStellarMetallicity/Gallazzi2005_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kirby2013_Data.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Fraser-McKelvie_2021.hdf5 
 
 stellar_mass_star_fe_over_h_mol_lofloor_100:
   type: "scatter"
@@ -540,6 +555,7 @@ stellar_mass_star_fe_over_h_mol_lofloor_100:
   observational_data:
     - filename: GalaxyStellarMassStellarMetallicity/Gallazzi2005_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kirby2013_Data.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Fraser-McKelvie_2021.hdf5 
 
 stellar_mass_star_fe_over_h_mol_hifloor_100:
   type: "scatter"
@@ -573,6 +589,7 @@ stellar_mass_star_fe_over_h_mol_hifloor_100:
   observational_data:
     - filename: GalaxyStellarMassStellarMetallicity/Gallazzi2005_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kirby2013_Data.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Fraser-McKelvie_2021.hdf5 
 
 stellar_mass_star_fe_over_h_lom_100:
   type: "scatter"
@@ -606,6 +623,7 @@ stellar_mass_star_fe_over_h_lom_100:
   observational_data:
     - filename: GalaxyStellarMassStellarMetallicity/Gallazzi2005_Data.hdf5
     - filename: GalaxyStellarMassStellarMetallicity/Kirby2013_Data.hdf5
+    - filename: GalaxyStellarMassStellarMetallicity/Fraser-McKelvie_2021.hdf5 
 
 
 stellar_mass_star_mg_over_fe_100:
@@ -615,7 +633,7 @@ stellar_mass_star_mg_over_fe_100:
     quantity: "derived_quantities.star_magnesium_over_iron_100_kpc"
     units: "dimensionless"
     start: -0.2
-    end: 0.4
+    end: 0.7
     log: false
   x:
     quantity: "apertures.mass_star_100_kpc"
@@ -637,7 +655,8 @@ stellar_mass_star_mg_over_fe_100:
     title: 'Stellar mass - [Mg/Fe]$_*$ relation (100 kpc aperture)'
     section: Stellar Metallicity
     caption: '[Mg/Fe] versus stellar mass, both computed in 100-kpc apertures. The values of [Mg/Fe] are obtained by computing the (log10 of) ratio between the total Magnesium mass in stars and total Iron mass in stars, and then normalising it by the corresponding solar abundances. The solar abundances are taken from Asplund et al. (2009). All haloes are plotted, including subhaloes.'
-
+  observational_data:
+    - filename: GalaxyStellarMassAlphatoIron/Gallazzi2021_Data.hdf5
 
 stellar_mass_star_o_over_fe_100:
   type: "scatter"
@@ -645,8 +664,8 @@ stellar_mass_star_o_over_fe_100:
   y:
     quantity: "derived_quantities.star_oxygen_over_iron_100_kpc"
     units: "dimensionless"
-    start: 0.0
-    end: 0.5
+    start: -0.2
+    end: 0.7
     log: false
   x:
     quantity: "apertures.mass_star_100_kpc"
@@ -668,4 +687,5 @@ stellar_mass_star_o_over_fe_100:
     title: 'Stellar mass - [O/Fe]$_*$ relation (100 kpc aperture)'
     section: Stellar Metallicity
     caption: '[O/Fe] versus stellar mass, both computed in 100-kpc apertures. The values of [O/Fe] are obtained by computing the (log10 of) ratio between the total Oxygen mass in stars and total Iron mass in stars, and then normalising it by the corresponding solar abundances. The solar abundances are taken from Asplund et al. (2009). All haloes are plotted, including subhaloes.'
-
+  observational_data:
+    - filename: GalaxyStellarMassAlphatoIron/Gallazzi2021_Data.hdf5
