--- a/flamingo/auto_plotter/baryon_fractions.yml
+++ b/flamingo/auto_plotter/baryon_fractions.yml
@@ -132,3 +132,39 @@ gas_mass_500:
     title: "Halo gas masses within $R_{500}$"
     caption: Gas masses within $R_{500}$. These are 'true' values, i.e. no cut or observational correction was applied.
     section: Baryon Fractions
+
+gas_fraction_500_calibration:
+  type: "2dhistogram"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "spherical_overdensities.mass_500_rhocrit"
+    units: Solar_Mass
+    start: 1e13
+    end: 1e15
+  y:
+    quantity: "derived_quantities.gas_fraction_true_R500"
+    units:  "dimensionless"
+    log: false
+    start: 0.
+    end: 1.2
+  median:
+    plot: true
+    log: true
+    min_num_points_highlight: 0
+    adaptive: true
+    number_of_bins: 20
+    start:
+      value: 1e13
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: "Halo gas fractions within $R_{500}$"
+    caption: Gas fractions within $R_{500}$ normalised by the cosmic mean. These are 'true' values, i.e. no cut or observational correction was applied.
+    section: AAA Calibration
+  observational_data:
+    - filename: HaloMassGasFractions/HSC-XXL.hdf5
+    - filename: HaloMassGasFractions/HSE-FLAMINGO.hdf5
