--- a/flamingo/auto_plotter/mass_functions.yml
+++ b/flamingo/auto_plotter/mass_functions.yml
@@ -338,3 +338,50 @@ stellar_mass_eddington_function_100:
     - filename: GalaxyStellarMassFunction/Ilbert2013.hdf5
     - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
     - filename: GalaxyStellarMassFunction/Driver2021.hdf5
+
+stellar_mass_eddington_function_extended_50:
+  type: "massfunction"
+  legend_loc: "lower left"
+  number_of_bins: 40
+  x:
+    quantity: "derived_quantities.stellar_mass_eddington_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 2e13
+  y:
+    units: 1/Mpc**3
+    start: 1e-7
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: Stellar Mass Function (50 kpc aperture) with Eddington bias with extended ranges
+    caption: 50 kpc aperture GSMF, showing all galaxies with a fixed bin-width of 0.2 dex. Includes Eddington bias.
+    section: Stellar Mass Function
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassFunction/LiWhite2009.hdf5
+    - filename: GalaxyStellarMassFunction/DSouza2015.hdf5
+    - filename: GalaxyStellarMassFunction/Wright2017.hdf5
+    - filename: GalaxyStellarMassFunction/Ilbert2013.hdf5
+    - filename: GalaxyStellarMassFunction/Leja_2020.hdf5
+    - filename: GalaxyStellarMassFunction/Driver2021.hdf5
+
+stellar_mass_eddington_function_calibration_extended_50:
+  type: "massfunction"
+  legend_loc: "lower left"
+  number_of_bins: 40
+  x:
+    quantity: "derived_quantities.stellar_mass_eddington_50_kpc"
+    units: Solar_Mass
+    start: 1e8
+    end: 2e13
+  y:
+    units: 1/Mpc**3
+    start: 1e-7
+    end: 0.316 # (1e-0.5)
+  metadata:
+    title: Stellar Mass Function (50 kpc aperture) with Eddington bias with extended ranges
+    caption: 50 kpc aperture GSMF, showing all galaxies with a fixed bin-width of 0.2 dex. Includes Eddington bias.
+    section: AAA Calibration
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyStellarMassFunction/Driver2021FLAMINGOBias.hdf5
