--- a/colibre-zooms/auto_plotter/stellar_mass_halo_mass.yml
+++ b/colibre-zooms/auto_plotter/stellar_mass_halo_mass.yml
@@ -7,7 +7,7 @@ stellar_mass_halo_mass_M200_centrals_ratio_100:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 1e8
-    end: 1e13
+    end: 1e15
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_200crit_100_kpc"
     units: "dimensionless"
@@ -17,12 +17,12 @@ stellar_mass_halo_mass_M200_centrals_ratio_100:
     plot: true
     log: true
     adaptive: true
-    number_of_bins: 30
+    number_of_bins: 40
     start:
       value: 1e8
       units: Solar_Mass
     end:
-      value: 1e13
+      value: 1e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{200,crit}$, centrals only)
@@ -42,7 +42,7 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_100:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
     start: 1e8
-    end: 1e13
+    end: 1e15
   y:
     quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_100_kpc"
     units: "dimensionless"
@@ -52,15 +52,85 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_100:
     plot: true
     log: true
     adaptive: true
-    number_of_bins: 30
+    number_of_bins: 40
     start:
       value: 1e8
       units: Solar_Mass
     end:
-      value: 1e13
+      value: 1e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (ratio, 100 kpc aperture, $M_{\rm BN98}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Moster2018Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_Ratio.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_50:
+  type: "scatter"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e15
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 40
+    start:
+      value: 1e8
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 50 kpc aperture, $M_{\rm BN98}$, centrals only)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Moster2018Ratio.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_Ratio.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_30:
+  type: "scatter"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "masses.mass_bn98"
+    units: Solar_Mass
+    start: 1e8
+    end: 1e15
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_30_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 40
+    start:
+      value: 1e8
+      units: Solar_Mass
+    end:
+      value: 1e15
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{\rm BN98}$, centrals only)
     caption: Includes only central haloes.
     section: Stellar Mass-Halo Mass
   observational_data:
@@ -138,6 +208,76 @@ stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_100:
     - filename: GalaxyStellarMassHaloMass/Moster2018RatioStellar.hdf5
     - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_RatioStellar.hdf5
 
+stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_50:
+  type: "scatter"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "apertures.mass_star_50_kpc"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e12
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 9e3
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 50 kpc aperture, $M_{\rm BN98}$, centrals only, stellar x-axis)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Moster2018RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_RatioStellar.hdf5
+
+stellar_mass_halo_mass_MBN98_centrals_ratio_stellar_30:
+  type: "scatter"
+  select_structure_type: 10
+  comment: "Centrals only"
+  legend_loc: "upper left"
+  x:
+    quantity: "apertures.mass_star_30_kpc"
+    units: Solar_Mass
+    start: 9e3
+    end: 1e12
+  y:
+    quantity: "derived_quantities.stellar_mass_to_halo_mass_bn98_30_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 1e-1
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 9e3
+      units: Solar_Mass
+    end:
+      value: 1e12
+      units: Solar_Mass
+  metadata:
+    title: Stellar Mass-Halo Mass relation (ratio, 30 kpc aperture, $M_{\rm BN98}$, centrals only, stellar x-axis)
+    caption: Includes only central haloes.
+    section: Stellar Mass-Halo Mass
+  observational_data:
+    - filename: GalaxyStellarMassHaloMass/Behroozi2019RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Moster2018RatioStellar.hdf5
+    - filename: GalaxyStellarMassHaloMass/Schaye2015_Ref_100_MBN98_RatioStellar.hdf5
+
 stellar_mass_halo_mass_M200_all_100:
   type: "scatter"
   legend_loc: "upper left"
@@ -145,7 +285,7 @@ stellar_mass_halo_mass_M200_all_100:
     quantity: "masses.mass_200crit"
     units: Solar_Mass
     start: 9e3
-    end: 1e13
+    end: 1e15
   y:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
@@ -155,12 +295,12 @@ stellar_mass_halo_mass_M200_all_100:
     plot: true
     log: true
     adaptive: true
-    number_of_bins: 25
+    number_of_bins: 40
     start:
       value: 9e3
       units: Solar_Mass
     end:
-      value: 1e13
+      value: 1e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{200,crit}$)
@@ -178,7 +318,7 @@ stellar_mass_halo_mass_MBN98_all_100:
     quantity: "masses.mass_bn98"
     units: Solar_Mass
     start: 9e3
-    end: 1e13
+    end: 1e15
   y:
     quantity: "apertures.mass_star_100_kpc"
     units: Solar_Mass
@@ -188,12 +328,12 @@ stellar_mass_halo_mass_MBN98_all_100:
     plot: true
     log: true
     adaptive: true
-    number_of_bins: 25
+    number_of_bins: 40
     start:
       value: 9e3
       units: Solar_Mass
     end:
-      value: 1e13
+      value: 1e15
       units: Solar_Mass
   metadata:
     title: Stellar Mass-Halo Mass relation (100 kpc aperture, $M_{\rm BN98}$)
