--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -74,7 +74,7 @@ scripts:
     section: Star Formation History
     title: Stellar Mass Density Evolution
   - filename: scripts/HI_mass_evolution.py
-    caption: Evolution of the atomic gas mass abundance plotted directly from the statistics.txt file produced by SWIFT, compared with assorted observational estimates. The simulation data is corrected for Helium by multiplying it by 1/0.76.
+    caption: Evolution of the atomic gas mass abundance plotted directly from the statistics.txt file produced by SWIFT, compared with assorted observational estimates corrected to our cosmology. The simulation data is corrected for Helium by multiplying it by 1/0.76.
     output_file: HI_mass_evolution.png
     section: Cold Gas Evolution
     title: Atomic Gas Mass Evolution
