--- a/colibre/config.yml
+++ b/colibre/config.yml
@@ -208,6 +208,11 @@ scripts:
     title: Step size vs deadtime fraction
     section: Run Performance
     output_file: stepsize_deadtime.png
+  - filename: scripts/deadtime_evolution.py
+    caption: Evolution of the dead time fraction as a function of scale factor.
+    title: Dead time fraction vs scale factor
+    section: Run Performance
+    output_file: deadtime_evolution.png
   - filename: scripts/density_temperature_species.py
     caption: Density-temperature diagram shaded by H$_2$ mass fraction. The fraction is computed as the H$_2$ mass contained in each cell over the mass of gas in that cell.
     output_file: subgrid_density_temperature_H2.png
