--- a/eagle-xl/config.yml
+++ b/eagle-xl/config.yml
@@ -177,7 +177,7 @@ scripts:
     section: Run Performance
     output_file: stepsize_deadtime.png
   - filename: scripts/deadtime_evolution.py
-    caption: Evolution of the dead time fraction as a function of scale factor.
+    caption: Evolution of the dead time fraction as a function of scale factor. The dashed line represents the average dead time over the entire run.
     title: Dead time fraction vs scale factor
     section: Run Performance
     output_file: deadtime_evolution.png
