Added additional stellar mass function and passive fraction - stellar mass plots with a 0.3 dex log-normal scatter in the stellar masses.

--- a/colibre-zooms/auto_plotter/star_formation_rates.yml
+++ b/colibre-zooms/auto_plotter/star_formation_rates.yml
@@ -405,6 +405,43 @@ stellar_mass_passive_fraction_50:
     - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
     - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
 
+stellar_mass_with_scatter_passive_fraction_50:
+  type: "scatter"
+  legend_loc: "lower left"
+  redshift_loc: "upper center"
+  min_num_points_highlight: 0
+  x:
+    quantity: "derived_quantities.mass_star_with_scatter_50_kpc"
+    units: solar_mass
+    start: 1e6
+    end: 1e12
+  y:
+    quantity: "derived_quantities.is_passive_50_kpc"
+    units: "dimensionless"
+    log: false
+    start: 0
+    end: 1
+  mean:
+    plot: true
+    log: true
+    scatter: "none"
+    adaptive: true
+    number_of_bins: 30
+    start:
+      value: 1e6
+      units: solar_mass
+    end:
+      value: 1e12
+      units: solar_mass
+  metadata:
+    title: Passive Fraction - Stellar Mass (50 kpc aperture, with scatter)
+    caption: A galaxy is determined as being passive if it has a sSFR below 0.01 / Gyr. All stellar masses contain an additional 0.3 dex log-normal scatter.
+    section: Star Formation Rates
+  observational_data:
+    - filename: GalaxyStellarMassPassiveFraction/Gilbank2010.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Moustakas2013.hdf5
+    - filename: GalaxyStellarMassPassiveFraction/Behroozi2019.hdf5
+
 stellar_mass_passive_fraction_centrals_30:
   type: "scatter"
   select_structure_type: 10
